--- a/Tertian/Tertian/Tertian.vcxproj
+++ b/Tertian/Tertian/Tertian.vcxproj
@@ -39,8 +39,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\Code\Tertian\Tertian\ThirdParty\SDL\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\Code\Tertian\Tertian\ThirdParty\SDL\Lib_Debug;$(LibraryPath)</LibraryPath>
+    <IncludePath>ThirdParty\SDL\include;$(IncludePath)</IncludePath>
+    <LibraryPath>ThirdParty\SDL\Lib_Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
