--- a/Tertian/Tertian/Tertian.vcxproj
+++ b/Tertian/Tertian/Tertian.vcxproj
@@ -97,6 +97,7 @@
     <ClInclude Include="Source\Graphics.h" />
     <ClInclude Include="Source\SDLApplication.h" />
     <ClInclude Include="Source\Timer.h" />
+    <ClInclude Include="Source\Utilities\GlobalDefines.h" />
     <ClInclude Include="Source\Utilities\SDLUtils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
