--- a/Tertian/Tertian/Tertian.vcxproj
+++ b/Tertian/Tertian/Tertian.vcxproj
@@ -88,15 +88,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="Source\Graphics.cpp" />
+    <ClCompile Include="Source\Keyboard.cpp" />
     <ClCompile Include="Source\main.cpp" />
+    <ClCompile Include="Source\Mouse.cpp" />
     <ClCompile Include="Source\SDLApplication.cpp" />
     <ClCompile Include="Source\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Keyboard.h" />
     <ClInclude Include="Source\Graphics.h" />
+    <ClInclude Include="Source\Keyboard.h" />
+    <ClInclude Include="Source\Mouse.h" />
     <ClInclude Include="Source\SDLApplication.h" />
     <ClInclude Include="Source\Timer.h" />
     <ClInclude Include="Source\Utilities\GlobalDefines.h" />
