--- a/Tertian/Tertian/Tertian.vcxproj
+++ b/Tertian/Tertian/Tertian.vcxproj
@@ -39,13 +39,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>ThirdParty\SDL\include;$(IncludePath)</IncludePath>
-    <LibraryPath>ThirdParty\SDL\Lib_Debug;$(LibraryPath)</LibraryPath>
+    <IncludePath>ThirdParty\SDL\include;$(IncludePath);D:\Code\Tertian\Tertian\ThirdParty\SDL\SDL_gfx\include</IncludePath>
+    <LibraryPath>ThirdParty\SDL\Lib_Debug;$(LibraryPath);D:\Code\Tertian\Tertian\ThirdParty\SDL\SDL_gfx\lib</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>D:\Code\Tertian\Tertian\ThirdParty\SDL\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\Code\Tertian\Tertian\ThirdParty\SDL\Lib_Release;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\Code\Tertian\Tertian\ThirdParty\SDL\include;$(IncludePath);D:\Code\Tertian\Tertian\ThirdParty\SDL\SDL_gfx\include</IncludePath>
+    <LibraryPath>D:\Code\Tertian\Tertian\ThirdParty\SDL\Lib_Release;$(LibraryPath);D:\Code\Tertian\Tertian\ThirdParty\SDL\SDL_gfx\lib</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -59,7 +59,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies);SDLmain.lib;SDL.lib;SDL_ttf.lib</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies);SDLmain.lib;SDL.lib;SDL_ttf.lib;sdlgfx.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -77,7 +77,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies);;SDL_ttf.lib</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies);;SDL_ttf.lib;sdlgfx.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
