--- a/Tertian/Tertian/Tertian.vcxproj.filters
+++ b/Tertian/Tertian/Tertian.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClCompile Include="Source\Mouse.cpp">
       <Filter>Core\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\FileReader.cpp">
+      <Filter>Core\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Animation.cpp">
+      <Filter>Core\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Graphics.h">
@@ -69,6 +75,12 @@
       <Filter>Core\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Mouse.h">
+      <Filter>Core\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\FileReader.h">
+      <Filter>Core\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Animation.h">
       <Filter>Core\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
