renamed level grid to cube grid so it can be used as a generic class.

--- a/Tertian/Tertian/Tertian.vcxproj
+++ b/Tertian/Tertian/Tertian.vcxproj
@@ -93,7 +93,7 @@
     <ClCompile Include="Source\FileReader.cpp" />
     <ClCompile Include="Source\Graphics.cpp" />
     <ClCompile Include="Source\Keyboard.cpp" />
-    <ClCompile Include="Source\LevelGrid.cpp" />
+    <ClCompile Include="Source\CubeGrid.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Mouse.cpp" />
     <ClCompile Include="Source\SDLApplication.cpp" />
@@ -106,7 +106,7 @@
     <ClInclude Include="Source\FileReader.h" />
     <ClInclude Include="Source\Graphics.h" />
     <ClInclude Include="Source\Keyboard.h" />
-    <ClInclude Include="Source\LevelGrid.h" />
+    <ClInclude Include="Source\CubeGrid.h" />
     <ClInclude Include="Source\Mouse.h" />
     <ClInclude Include="Source\SDLApplication.h" />
     <ClInclude Include="Source\Timer.h" />
