--- a/Tertian/Tertian/Tertian.vcxproj.filters
+++ b/Tertian/Tertian/Tertian.vcxproj.filters
@@ -57,7 +57,7 @@
     <ClCompile Include="Source\XMLFileReader.cpp">
       <Filter>Core\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source\LevelGrid.cpp">
+    <ClCompile Include="Source\CubeGrid.cpp">
       <Filter>Core\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -98,7 +98,7 @@
     <ClInclude Include="Source\XMLFileReader.h">
       <Filter>Core\Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Source\LevelGrid.h">
+    <ClInclude Include="Source\CubeGrid.h">
       <Filter>Core\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
