LevelGrid is now a skeleton class which will be used as a game-specific representation of an isometric level composed of tiles.

--- a/Tertian/Tertian/Tertian.vcxproj.filters
+++ b/Tertian/Tertian/Tertian.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="Source\CubeGrid.cpp">
       <Filter>Core\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\LevelGrid.cpp">
+      <Filter>Core\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Graphics.h">
@@ -99,6 +102,9 @@
       <Filter>Core\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\CubeGrid.h">
+      <Filter>Core\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\LevelGrid.h">
       <Filter>Core\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
